--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=your_db_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.secret=your_secret_key
+jwt.secret=opvelSsia7TY286Z3LpO5WU5skcYwpKdG/QGqrjDOEo=
 jwt.expirationMs=3600000
